rendering google map

--- a/public/index.html
+++ b/public/index.html
@@ -21,5 +21,9 @@
     <div id="modal-hook"></div>
     <div id="drawer-hook"></div>
     <div id="root"></div>
+    <script
+      async
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDJ6VzaZC2QgTiVHK1kjYwsw-GWoK1YKgg"
+    ></script>
   </body>
 </html>
